Commons Swing (C) Black Rook Software, All rights reserved.

Slated for 2.7.0
================

- RList: Moved to another package.
- Added: RBrowseObjectPanel.


Changed in 2.6.0
================

- Version change: Really should be 2.6 for base Java version change.

Changed in 2.5.6
================

- Changed: Added generics to encapsulated Swing components. As a result, this 
  now requires Java 7 to run.

Changed in 2.5.5
================

- Changed: Source indentation style.


Changed in 2.5.4
================

- Added: RTextField.setStringValue() and to all implementing classes.
- Changed: Some documentation cleanup.

Changed in 2.5.3
================

- Added: RList.clear().

Changed in 2.5.2
================

- Added: RTable.getSelectedCount().
- Fixed: RTableModel now properly checks the return type of setter methods to 
  determine editable fields. It did not properly detect primitive types.
- Fixed: Some places in RTable and RTableModel that could potentially throw
  Exceptions when adding or changing or updating rows.
- Added/Changed: RTableFilter for easier implementation of table filtering
  on RTables. RTable.setRowFilter() was changed to reflect this.
- Changed: Broke out the file chooser dialog in RFileField.
- Fixed: RTable returns correctly selected rows when contents are sorted or 
  filtered.
- Changed: RCheckBox is now an input field of some type.

Changed in 2.5.1
================

- Added: RComboField didn't have methods for adding to the underlying
  combobox. Would've been nice.

Changed in 2.5.0
================

- Changed: Applied copyright clause to some files that didn't have it.
- Added: BufferedCanvas for writing to a frame-based canvas.
- Added: RTable for simple tables for data arranged in Java beans.
- Added: SwingCommon.setExceptionHandler().

Changed in 2.4.0
================

- Fixed: Some flickering issues with the Wave editor canvas.
- Added: SwingCommon.createSimpleFrame(String, Component).

Changed in 2.3.0
================
