@@ -5,6 +5,7 @@ Slated for 2.7.0
 
 - RList: Moved to another package.
 - Added: RBrowseObjectPanel.
+- Added: TreeSwing.
 
 
 Changed in 2.6.0
